2016-09-28  Peter Stephenson  <p.stephenson@samsung.com>

	* Martijn Dekker: 39463: configure.ac: another way of getting
	the default system path.

	* 39460: Src/params.c, Src/zsh.h: don't import PS4 if running as
	root.  Currently no known exploit with this in zsh as xtrace
	needs an explicit option setting, so this is just precautionary.

2016-09-27  Oliver Kiddle  <opk@zsh.org>

	* Marko Myllynen: 39453: Completion/Unix/Command/_openstack:
	new openstack completions

	* 39369 (tweaked cf 39371): Src/Zle/zle_thingy.c: when calling
	an internal widget, set bindk because some widgets use it to
	determine how they should act

2016-09-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 39437: Src/exec.c: use list_pipe_pid in assignment for clarity

2016-09-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Martijn Dekker: 39448: Src/loop.c: reset REPLY in select when
	needed on user action.

2016-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 39436: Src/exec.c, Src/signals.c: Don't execute builtin if
	interrupted; set lastval to 128 + SIGINT on interrupt.

	* 39435: Src/exec.c: Don't set gleader of SUBJOB immediately if
	SUPERJOB has no processes.

2016-09-24  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39423: Completion/Zsh/Command/_zed: Support the '--'
	end-of-options mark.

	* 39423: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Produce nicer applied-string messages for 'exec'
	actions.

2016-09-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39412: Src/Zle/computil.c: Fix directory completion when
	$PWD:h contains parentheses, which are interpreted as globbing
	metacharacters.

2016-09-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39410: Completion/Darwin/Type/_retrieve_mac_apps,
	Completion/Unix/Command/_dsh, Completion/Unix/Type/_dates:
	Fix unintentional history modifiers.

2016-09-22  Adam Gibbins  <adam@adamgibbins.com>

	* unposted: Completion/Unix/Command/_gpg: Correct typo
